--- a/README
+++ b/README
@@ -1,12 +1,45 @@
 HOW TO BUILD AND RUN:
 
-Download and extract the latest tar.gz file from:
+Download and extract the latest FCHAD suported tar.gz file from:
 
 http://mielke.cc/brltty/download.html
 
-This code base has been tested with brltty4.3
+The latest supported file is 4.3, I'm working on 4.4 support, just haven't gotten there yet.
+
+$ wget http://mielke.cc/brltty/releases/brltty-4.3.tar.gz
+$ tar -xvvzf brltty-4.3.tar.gz
+
+Cd to the Drivers directory of the brltty source:
+
+$ cd brltty-4.3/Drivers/Braille/
+
+Git clone the FCHAD sources, and change to xlib-morse:
+
+$ git clone git://github.com/timthelion/FCHAD.git
+$ cd FCHAD
+$ git checkout xlib-morse
 
 Apply the changes described by config.mk.diff to config.mk in the top
+
+$ cd ../../../
+$  
+
+Configure: On Arch-linux:
+
+$ ./configure --prefix=/usr \
+  --sysconfdir=/etc \
+  --mandir=/usr/share/man \
+  --localstatedir=/var \
+  --with-screen-driver=a2 \
+  --enable-gpm \
+  --disable-java-bindings \
+  --disable-caml-bindings \
+  PYTHON=/usr/bin/python2
+
+Elsewhere:
+
+$ ./configure
+
 
 WHAT is an FCHAD?
 An FCHAD is a Fast CHaricter braille Display.  That is, it's a braille display
