--- a/README
+++ b/README
@@ -1,31 +1,43 @@
-CURRENT INSTRUCTIONS DO NOT WORK!!!!!!!!
-PLEASE WAIT FOR THEM TO BE UPDATED!!!
-!NOT WORKING!HOW TO BUILD AND RUN:
-!NOT WORKING!
-!NOT WORKING!Download and extract the latest FCHAD s!NOT WORKING!uported tar.gz file from:
+Download and extract the latest FCHAD suported tar.gz file from:
 
-!NOT WORKING!http://mielke.cc/brltty/download.html
+http://mielke.cc/brltty/download.html
 
-!NOT WORKING!The latest supported file is 4.3, I'm working on 4.4 support, just haven't gotten there yet.
+$ wget http://mielke.cc/brltty/releases/brltty-4.4.tar.gz $
+tar -xvvzf brltty-4.4.tar.gz
 
-!NOT WORKING!$ wget http://mielke.cc/brltty/releases/brltty-4.3.tar.gz
-!NOT WORKING!$ tar -xvvzf brltty-4.3.tar.gz
+Cd to the Drivers directory of the brltty source:
 
-!NOT WORKING!Cd to the Drivers directory of the brltty source:
+$ cd brltty-4.4/Drivers/Braille/
 
-!NOT WORKING!$ cd brltty-4.3/Drivers/Braille/
+Git clone the FCHAD sources, and change to xlib-morse:
 
-!NOT WORKING!Git clone the FCHAD sources, and change to xlib-morse:
+$ git clone git://github.com/timthelion/FCHAD.git
+$ cd FCHAD
+$ git checkout origin/xlib-morse
 
-!NOT WORKING!$ git clone git://github.com/timthelion/FCHAD.git
-!NOT WORKING!$ cd FCHAD
-!NOT WORKING!$ git checkout xlib-morse
+$ cd ../../../
 
-!NOT WORKING!Configure: On Arch-linux:
-!NOT WORKING!Most of the build depends are listed here: http://www.archlinux.org/packages/extra/x86_64/brltty/
+Add the line:
 
-!NOT WORKING!$ cd ../../../
-!NOT WORKING!$ ./configure --prefix=/usr \
+BRLTTY_BRAILLE_DRIVER([fc], [FCHAD])
+
+to configure.ac along with the other lines of the same heading.
+
+run autoconf
+
+$ ./autoconf
+
+run configure
+
+$ ./configure
+
+in arch:
+
+Configure: On Arch-linux:
+Most of the build depends are listed here: http://www.archlinux.org/packages/extra/x86_64/brltty/
+
+$ cd ../../../
+$ CFLAGS=-pg ./configure --prefix=/usr \
   --sysconfdir=/etc \
   --mandir=/usr/share/man \
   --localstatedir=/var \
@@ -35,14 +47,7 @@ PLEASE WAIT FOR THEM TO BE UPDATED!!!
   --disable-caml-bindings \
   PYTHON=/usr/bin/python2
 
-!NOT WORKING!Elsewhere:
-
-!NOT WORKING!$ cd ../../../
-!NOT WORKING!$ ./configure
-
-!NOT WORKING!Apply the changes described by config.mk.patch to config.mk in the top
-
-!NOT WORKING!$  
+$ make
 
 To run:
 
