--- a/README
+++ b/README
@@ -1,3 +1,60 @@
+You may also checkout the other branches: fchad-xlib and fchad-morse
+
+To INSTALL:
+Download and extract the latest FCHAD suported tar.gz file from:
+
+http://mielke.cc/brltty/download.html
+
+$ wget http://mielke.cc/brltty/releases/brltty-4.4.tar.gz $
+tar -xvvzf brltty-4.4.tar.gz
+
+Cd to the Drivers directory of the brltty source:
+
+$ cd brltty-4.4/Drivers/Braille/
+
+Git clone the FCHAD sources, and change to xlib-morse:
+
+$ git clone git://github.com/timthelion/FCHAD.git
+$ cd FCHAD
+
+$ cd ../../../
+
+Add the line:
+
+BRLTTY_BRAILLE_DRIVER([fc], [FCHAD])
+
+to configure.ac along with the other lines of the same heading.
+
+run autoconf
+
+$ ./autoconf
+
+run configure
+
+$ ./configure
+
+in arch:
+
+Configure: On Arch-linux:
+Most of the build depends are listed here: http://www.archlinux.org/packages/extra/x86_64/brltty/
+
+$ cd ../../../
+$ CFLAGS=-pg ./configure --prefix=/usr \
+  --sysconfdir=/etc \
+  --mandir=/usr/share/man \
+  --localstatedir=/var \
+  --with-screen-driver=a2 \
+  --enable-gpm \
+  --disable-java-bindings \
+  --disable-caml-bindings \
+  PYTHON=/usr/bin/python2
+
+$ make
+
+To run:
+
+$ ./run-brltty -b fc -d /dev/ttyUSB0 -n -e
+
 WHAT is an FCHAD?
 An FCHAD is a Fast CHaricter braille Display.  That is, it's a braille display
 that displays one charicter at a time, and can change which charicter it is
